Started to look at most recent weeks predictions.

--- a/epl_predictions_2000_2019.ipynb
+++ b/epl_predictions_2000_2019.ipynb
@@ -201,9 +201,17 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import eli5\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import lightgbm as lgbm\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import seaborn as sns\n",
+    "import shap\n",
+    "from collections import deque, defaultdict\n",
+    "from eli5.sklearn import PermutationImportance\n",
+    "from eli5.lightgbm import explain_weights_lightgbm\n",
     "from scipy import stats\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.decomposition import PCA\n",
@@ -214,15 +222,7 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import f1_score, make_scorer, classification_report, confusion_matrix, roc_curve, roc_auc_score \n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score,precision_recall_curve, auc\n",
-    "from eli5.sklearn import PermutationImportance\n",
-    "from eli5.lightgbm import explain_weights_lightgbm\n",
     "from xgboost import XGBClassifier\n",
-    "from collections import defaultdict\n",
-    "import shap\n",
-    "import eli5\n",
-    "import re\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
