--- a/epl_predictions.ipynb
+++ b/epl_predictions.ipynb
@@ -42,10 +42,17 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import eli5\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import lightgbm as lgbm\n",
-    "from collections import deque\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import seaborn as sns\n",
+    "import shap\n",
+    "from collections import deque, defaultdict\n",
+    "from eli5.sklearn import PermutationImportance\n",
+    "from eli5.lightgbm import explain_weights_lightgbm\n",
     "from scipy import stats\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.decomposition import PCA\n",
@@ -56,22 +63,14 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import f1_score, make_scorer, classification_report, confusion_matrix, roc_curve, roc_auc_score \n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score,precision_recall_curve, auc\n",
-    "from eli5.sklearn import PermutationImportance\n",
-    "from eli5.lightgbm import explain_weights_lightgbm\n",
     "from xgboost import XGBClassifier\n",
-    "from collections import defaultdict\n",
-    "import shap\n",
-    "import eli5\n",
-    "import re\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
     "#the data used in this excercise was sourced from http://www.football-data.co.uk\n",
     "df = pd.read_csv('./data/E0.csv')\n",
     "df = df.append(pd.read_csv('./data/E0_2018.csv')).reset_index(drop=True)\n",
-    "print(df.head())"
+    "df.head()"
    ]
   },
   {
@@ -9477,6 +9476,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
